<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg10"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/border"
                android:src="@drawable/banner10"
                android:scaleType="fitXY"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/image"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/front_page_title"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textSize="30dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginHorizontal="20dp"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="10"
                android:shadowColor="#FF6D00"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.499"
                android:layout_marginTop="20dp"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cdView"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                tools:ignore="MissingConstraints"
                android:layout_below="@id/recyclerView"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            <Button
                android:id="@+id/btnG"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_below="@id/cdView"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/back_button"
                android:gravity="center"
                android:text="@string/next_button_name"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold"
                android:background="@drawable/border1"
                app:backgroundTint="#C58C27"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="10"
                android:shadowColor="#AA00FF"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom|end"
                android:layout_marginHorizontal="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#C58C27"
                android:contentDescription="@string/dialog_button"
                android:src="@drawable/ic_baseline_front_hand_24"/>

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>