<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="15dp"
    app:cardCornerRadius="8dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/closeDialog"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:background="@drawable/ic_close"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/back_button" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:background="@drawable/navbar10"
                android:contentDescription="@string/back_button" />
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/fab_title"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="5"
                android:shadowColor="#FF6D00"/>

            <TextView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:text="@string/fab_con"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"
                android:justificationMode="inter_word"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="5"
                android:shadowColor="#FF6D00"/>

        </LinearLayout>
    </ScrollView>
</androidx.cardview.widget.CardView>