<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg10"
    tools:context=".NextAct">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:shadowColor="#FF6D00"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="10"
            android:text="@string/rule_title"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:clipToPadding="false"
            android:foregroundGravity="bottom"
            android:overScrollMode="never" />


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

        <TextView
            android:id="@+id/t1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_title"
            android:gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="25dp"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="10"
            android:shadowColor="#FF6D00"/>

        <TextView
            android:id="@+id/t2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/abt1"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:justificationMode="inter_word"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="10"
            android:shadowColor="#FF6D00"
            android:layout_below="@id/t1"/>

        <TextView
            android:id="@+id/t3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/abt2"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:justificationMode="inter_word"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="10"
            android:shadowColor="#FF6D00"
            android:layout_below="@id/t2"/>

                <Button
                    android:id="@+id/nextP"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/t3"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/border1"
                    android:shadowColor="#FF6D00"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="10"
                    android:text="QUAY LẠI TRANG CHỦ"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    app:backgroundTint="#C58C27" />

            </RelativeLayout>
        </ScrollView>
</LinearLayout>